--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
   <artifactId>library-dicrectory</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
+    <properties>
+        <!-- Use the latest version whenever possible. -->
+        <jackson.version>2.7.0</jackson.version>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -17,7 +21,7 @@
             </plugin>
         </plugins>
     </build>
-    <name>library-dicrectory</name>
+    <name>library-directory</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -26,5 +30,27 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.dropwizard</groupId>
+      <artifactId>dropwizard-core</artifactId>
+      <version>0.9.2</version>
+    </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+      <!-- Note: core-annotations version x.y.0 is generally compatible with
+      (identical to) version x.y.1, x.y.2, etc. -->
+      <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>${jackson.version}</version>
+      </dependency>
   </dependencies>
 </project>
