--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
   <artifactId>library-dicrectory</artifactId>
+
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
     <properties>
@@ -25,7 +26,17 @@
     <name>library-directory</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+      <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongodb-driver</artifactId>
+          <version>3.4.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.inject</groupId>
+          <artifactId>guice</artifactId>
+          <version>4.0-beta5</version>
+      </dependency>
+      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
