--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
           <version>0.9.2</version>
       </dependency>
       <dependency>
+          <!-- Guava version is pinned to avoid dependency issues -->
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>18.0</version>
@@ -95,6 +96,8 @@
           <groupId>com.hubspot.dropwizard</groupId>
           <artifactId>dropwizard-guice</artifactId>
           <version>1.0.6.0</version>
+          <!-- These are excluded in favour of explicit declaration to avoid
+          dependency issues -->
           <exclusions>
               <exclusion>
                 <groupId>com.google.inject.extensions</groupId>
